Closes #2868: Fix wrapping in CKEditor5 source edit mode.

--- a/themes/custom/az_barrio/css/ckeditor5.css
+++ b/themes/custom/az_barrio/css/ckeditor5.css
@@ -4,6 +4,14 @@
 }
 
 /**
+ * Fix source edit wrap issue
+ * See https://github.com/az-digital/az_quickstart/issues/2868.
+ */
+.ck-source-editing-area {
+  overflow-wrap: anywhere;
+}
+
+/**
  * Override the width of the table set by Bootstrap content styles.
  * See: https://github.com/ckeditor/ckeditor5/issues/3253.
  */
